@@ -50,7 +50,8 @@ Version 1.4.3 - CVS
     email addresses.
   - Fixed date display bug for messages of today. Show short format in case
     of long format. (only occures in the timeframe around 0:00 AM till
-    timezone).    
+    timezone).
+  - Use Special Folder Color config option works again (#931956).
 
 Version 1.4.2 - 1 October 2003
 ------------------------------
